# sub0-hackathon

./: .gitignore  MILESTONE-2-PLAN.md  README.md  TODO.md  arkiv-feedback.md  package-lock.json  package.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  arkivendor.ts  cli.py  main.py  package-lock.json  package.json  pyproject.toml  test-client.ts  tsconfig.json
backend/tests/: example_x402_api.py  test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py  test9.py
cli/: .env.example  README.md  TODO.md  package-lock.json  package.json  test-list.md  tsconfig.json
cli/src/: cli.ts  staking-utils.ts
cli/src/tests/: balanceTest.ts  papiClientTest.ts  stakingTest.ts  stashDiscoveryTest.ts
docs/: README.md  package-lock.json
docs/app/: layout.tsx
docs/app/milestone-2/: page.tsx
docs/app/use-cases/: page.tsx
docs/components/: HackathonBanner.tsx  Header.tsx  MarketplaceView.tsx  ProductDetail.tsx  SessionCard.tsx  Spuro.tsx
docs/data/: mockData.ts
docs/types/: index.ts
frontend/: README.md  TODO.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/demo/: page.tsx
frontend/components/: Airkivenue.tsx  CategoryCard.tsx  ConnectWalletButton.tsx  DemoPaywall.tsx  HackathonBanner.tsx  Header.tsx  MarketplaceView.tsx  PaymentModal.tsx  ProductCard.tsx  ProductDetail.tsx  SessionsView.tsx  Spuro.tsx  TabProvider.tsx  Web3Provider.tsx
frontend/data/: mockData.ts
frontend/lib/: spuroServerClient.ts
frontend/types/: index.ts
(+4 files in other folders)
